--- a/homepage.html
+++ b/homepage.html
@@ -1,10 +1,13 @@
-<!DOCTYPE html>
+<!DOCTYPE html ng-app="homepage">
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <title>Zach's Homepage</title>
+    <link href="css/style.css" type="text/css">
+    <link href="css/bootstrap.min.css" type="text/css">
+    <link href="js/angular.min.js" type="text/javascript">
 </head>
-<body>
-    <div> This is where all the content will go.</div>
+<body ng-controller="HomepageController">
+    <div class=""> </div>
 </body>
 </html>
