--- a/homepage.html
+++ b/homepage.html
@@ -1,13 +1,28 @@
-<!DOCTYPE html ng-app="homepage">
-<html lang="en">
+<!DOCTYPE html>
+<html lang="en" ng-app="homepage">
 <head>
     <meta charset="UTF-8">
     <title>Zach's Homepage</title>
-    <link href="css/style.css" type="text/css">
-    <link href="css/bootstrap.min.css" type="text/css">
-    <link href="js/angular.min.js" type="text/javascript">
+    <link rel="stylesheet" href="css/bootstrap.min.css" type="text/css">
+    <script src="js/angular.min.js" type="text/javascript"></script>
+    <script src="js/app.js" type="text/javascript"></script>
+    <script src="js/Controllers/HomePageController.js"></script>
 </head>
-<body ng-controller="HomepageController">
-    <div class=""> </div>
+<body ng-controller="HomePageController" class="center-block" style="width: 1000px">
+    <div class="row" style="margin-top: 15px">
+        <div class="panel panel-primary" ng-repeat="group in links">
+            <div class="panel-heading">
+                <div class="panel-title text-center "> {{group.group}} </div>
+            </div>
+            <div class="panel-body">
+                <div class="center-block">
+                    <a ng-repeat="link in group.links" href="{{link.link}}" style="text-decoration: none">
+                        <button ng-if="$even" type="button" class="btn btn-primary btn-lg"> {{link.title}} </button>
+                        <button ng-if="$odd" type="button" class="btn btn-default btn-lg"> {{link.title}} </button>
+                    </a>
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
