--- a/homepage.html
+++ b/homepage.html
@@ -7,20 +7,28 @@
     <script src="js/angular.min.js" type="text/javascript"></script>
     <script src="js/app.js" type="text/javascript"></script>
     <script src="js/Controllers/HomePageController.js"></script>
+    <script src="js/moment.min.js"></script>
 </head>
-<body ng-controller="HomePageController" class="center-block" style="width: 1000px">
+<body ng-controller="HomePageController" class="center-block" style="width: 1300px">
     <div class="row" style="margin-top: 15px">
-        <div class="panel panel-primary" ng-repeat="group in links">
-            <div class="panel-heading">
-                <div class="panel-title text-center"> {{group.group}} </div>
-            </div>
-            <div class="panel-body">
-                <div class="center-block">
-                    <a ng-repeat="link in group.links" href="{{link.link}}" style="text-decoration: none">
-                        <button ng-if="$even" type="button" class="btn btn-primary btn-lg"> {{link.title}} </button>
-                        <button ng-if="$odd" type="button" class="btn btn-default btn-lg"> {{link.title}} </button>
-                    </a>
+        <div class="col-lg-7">
+            <div class="panel panel-primary" ng-repeat="group in links">
+                <div class="panel-heading">
+                    <div class="panel-title text-center"> {{group.group}} </div>
                 </div>
+                <div class="panel-body">
+                    <div class="center-block">
+                        <a ng-repeat="link in group.links" href="{{link.link}}" style="text-decoration: none; margin-bottom: 10px;">
+                            <button ng-if="$even" type="button" class="btn btn-primary btn-lg"> {{link.title}} </button>
+                            <button ng-if="$odd" type="button" class="btn btn-default btn-lg"> {{link.title}} </button>
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="col-lg-5">
+            <div class="page-header">
+                <h2> {{ currDate }} </h2>
             </div>
         </div>
     </div>
