Added location support for weather services.

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                         <img ng-src="{{weather.icon}}" alt="Current weather icon for {{ weather.condition }}"/>
                     </div>
                     <div class="row forecast-link">
-                        <a href="{{weather.forecastLink}}">Today's forecast link for Hoboken.</a>
+                        <a href="{{weather.forecastLink}}">Today's forecast link for {{ city }}.</a>
                     </div>
                 </div>
                 <hr>
