Removes https from champion.gg link.

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                     </div>
                     <div class="row">
                         <input ng-model="champion" type="text" ng-keydown="checkKey($event)">
-                        <a href="https://champion.gg/champion/{{champion}}" id="champggLink"><button>Go</button></a>
+                        <a href="http://champion.gg/champion/{{champion}}" id="champggLink"><button>Go</button></a>
                     </div>
                 </div>
             </div>
